src/objects/MUSW__Violation_Type__c.object
<CustomObject>
    <description>Repository of Municipality Code Ordinances and Sections</description>
    <fields>
        <fullName>Approval_Description__c</fullName>
        <description>Approval Description</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Approval Status</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submit for Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_to_correct__c</fullName>
        <label>Days to correct</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department_Area__c</fullName>
        <label>Department Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DRV</fullName>
                </value>
                <value>
                    <fullName>DFC</fullName>
                </value>
                <value>
                    <fullName>REA</fullName>
                </value>
                <value>
                    <fullName>MLS</fullName>
                </value>
                <value>
                    <fullName>ENG</fullName>
                </value>
                <value>
                    <fullName>BUS</fullName>
                </value>
                <value>
                    <fullName>FIR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AMC</fullName>
                </value>
                <value>
                    <fullName>APP</fullName>
                </value>
                <value>
                    <fullName>ARC</fullName>
                </value>
                <value>
                    <fullName>AUC</fullName>
                </value>
                <value>
                    <fullName>BAI</fullName>
                </value>
                <value>
                    <fullName>CAM</fullName>
                </value>
                <value>
                    <fullName>CEM</fullName>
                </value>
                <value>
                    <fullName>COL</fullName>
                </value>
                <value>
                    <fullName>COS</fullName>
                </value>
                <value>
                    <fullName>CTR</fullName>
                </value>
                <value>
                    <fullName>CTS</fullName>
                </value>
                <value>
                    <fullName>DRS</fullName>
                </value>
                <value>
                    <fullName>DTS</fullName>
                </value>
                <value>
                    <fullName>EMP</fullName>
                </value>
                <value>
                    <fullName>ENG</fullName>
                </value>
                <value>
                    <fullName>FDE</fullName>
                </value>
                <value>
                    <fullName>FHR</fullName>
                </value>
                <value>
                    <fullName>GEO</fullName>
                </value>
                <value>
                    <fullName>INV</fullName>
                </value>
                <value>
                    <fullName>LAN</fullName>
                </value>
                <value>
                    <fullName>LIM</fullName>
                </value>
                <value>
                    <fullName>NOT</fullName>
                </value>
                <value>
                    <fullName>OSW</fullName>
                </value>
                <value>
                    <fullName>PRO</fullName>
                </value>
                <value>
                    <fullName>REA</fullName>
                </value>
                <value>
                    <fullName>SEC</fullName>
                </value>
                <value>
                    <fullName>SEL</fullName>
                </value>
                <value>
                    <fullName>TAT</fullName>
                </value>
                <value>
                    <fullName>TIM</fullName>
                </value>
                <value>
                    <fullName>WRO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_From_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_To_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Mandatory_Citation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Mandatory Citation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Law_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Law Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credential_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Abatement_Requirement__c</fullName>
        <description>Standardized description of the action that must be taken to correct the violation.  This is displayed on the add/edit violation page by default. This can be used in letters.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Abatement Requirement</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The lookup from the violation to the ordinance table should be restricted to only Active Ordinances.  This allows client to retire violations where codes have been changed or replaced without changing the content of historical violations.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__Citation_Amount__c</fullName>
        <description>This value can be used to standardize the fine amount for a code violation. The DRE would reference this field.</description>
        <label>Citation Amount</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Code_Number__c</fullName>
        <defaultValue>&quot;1-1.1&quot;</defaultValue>
        <description>Typically, this is a chapter within the Code Book.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Code Number</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MUSW__Code__c</fullName>
        <description>Title of the Code Book (ie City Codes, Zoning Code).</description>
        <label>Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2006 IPMC</fullName>
                    <default>true</default>
                    <label>2006 IPMC</label>
                </value>
                <value>
                    <fullName>2006 IBC</fullName>
                </value>
                <value>
                    <fullName>2006 IRC</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Dangerous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This value can be pushed to the violation object for reporting and prioritization.</description>
        <label>Dangerous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__Description__c</fullName>
        <description>Section Text from Municipality Code Book</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Estimated_Cost__c</fullName>
        <description>This value can be pushed to the violation object for fine creation.</description>
        <label>Estimated Cost</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__First_Reinspection__c</fullName>
        <description>Allows a different timeframe for a first reinspection versus a subsequent reinspection. This field only has an impact if it is referenced in the Violation Days_to_Correct__c formula.</description>
        <label>First Reinspection</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Second_Reinspection__c</fullName>
        <description>Allows a different timeframe for a first reinspection versus a subsequent reinspection. This field only has an impact if it is referenced in the Violation Days_to_Correct__c formula.</description>
        <label>Second Reinspection</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__SectionDescription__c</fullName>
        <description>Specific section within the Code Book.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Section__c</fullName>
        <description>Section number within the Code Book.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Section Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Short_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__WIP_Reinspection__c</fullName>
        <description>Allows a different timeframe for a first reinspection versus a subsequent reinspection. This field only has an impact if it is referenced in the Violation Days_to_Correct__c formula.</description>
        <label>WIP Reinspection</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Reinspections__c</fullName>
        <formula>If(MUSW__First_Reinspection__c &lt; 1 || ISBLANK(MUSW__First_Reinspection__c ), 0, 
If(MUSW__Second_Reinspection__c &lt; 1 || ISBLANK(MUSW__Second_Reinspection__c), 1,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. Reinspections</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Item_Weight__c</fullName>
        <label>Sub Item Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Violation_For__c</fullName>
        <label>Violation For</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inspection</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Ordinance</label>
    <listViews>
        <fullName>Compliance_Violations</fullName>
        <columns>NAME</columns>
        <columns>MUSW__Code_Number__c</columns>
        <columns>Law_Code__c</columns>
        <columns>MUSW__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MUSW__Violation_Type__c.Compliance_Violation</value>
        </filters>
        <label>Compliance Violations</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MUSW__All</fullName>
        <columns>NAME</columns>
        <columns>MUSW__Description__c</columns>
        <columns>MUSW__Section__c</columns>
        <columns>MUSW__SectionDescription__c</columns>
        <columns>MUSW__Citation_Amount__c</columns>
        <columns>MUSW__Estimated_Cost__c</columns>
        <columns>MUSW__Dangerous__c</columns>
        <columns>MUSW__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Paragraph_Approval_Queue_Violation_Type</fullName>
        <columns>NAME</columns>
        <columns>Approval_Description__c</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending Approval</value>
        </filters>
        <label>Paragraph Approval Queue</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ordinances</pluralLabel>
    <recordTypes>
        <fullName>Compliance_Violation</fullName>
        <active>true</active>
        <label>Compliance Violation</label>
    </recordTypes>
    <recordTypes>
        <fullName>DIS</fullName>
        <active>true</active>
        <description>DIS Ordinances</description>
        <label>DIS</label>
    </recordTypes>
    <recordTypes>
        <fullName>MUSW__Condition</fullName>
        <active>true</active>
        <description>Condition Description Condition Description Condition Description Condition Description Condition Description Condition Description Condition Description Condition Description</description>
        <label>Condition</label>
    </recordTypes>
    <recordTypes>
        <fullName>MUSW__Ordinance</fullName>
        <active>true</active>
        <label>Ordinance</label>
    </recordTypes>
    <recordTypes>
        <fullName>MUSW__Standard_Comment</fullName>
        <active>true</active>
        <label>Standard Comment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Paragraph</fullName>
        <active>true</active>
        <description>Paragraph</description>
        <label>Paragraph</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>